--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,9 +10,20 @@ html, body {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 #root {
   width: 100%;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+/* Remove qualquer max-width padrão */
+.container, main, section {
+  max-width: none !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
